--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </div>
   <h1 style="margin-top: 100px;">&lt;iframe&gt; security playground</h1>
 
-    <h2>./frame.html</h2>    
+    <h2>(A) Load file:// document <br> ./frame.html</h2>    
     <input
       type='button'
       onclick='postToChild("01", "Hello from parent via postMessage", "file://")'
@@ -40,7 +40,7 @@
     <iframe id='childFrame01' src='./frame.html' sandbox='allow-same-origin allow-scripts' style='width:500px; height:150px; border: 1px solid black;'></iframe>
     <br/><br />
     
-    <h2>https://canal874-electron-test-security-sandbox.netlify.app/frame.html</h2>
+    <h2>(B) Load https:// document <br> https://canal874-electron-test-security-sandbox.netlify.app/frame.html</h2>
     <input
       type='button'
       onclick='postToChild("02", "Hello from parent via postMessage", "file://")'
@@ -61,5 +61,17 @@
     <br>
     <iframe id='childFrame02' src='https://canal874-electron-test-security-sandbox.netlify.app/frame.html'' sandbox='allow-same-origin allow-scripts' style='width:500px; height:150px; border: 1px solid black;'></iframe>
 
+    <br>
+    <br>
+    <h2>(C) Remove properties of window and window.document</h2>
+    <input type='button' onclick='changeDOM("Changed")' value='Change div01' /><br>    
+    <input type='button' onclick='removeGlobalProperties()' value='Remove properties' /><br>
+    <input type='button' onclick='changeDOM("Changed again")' value='Change div01 again' /><br>    
+    <div id='div01' style='border:1px solid black'>&lt;div01&gt;</div>
+    <br>
+    <br>
+    <iframe id='childFrame01' src='./frame.html' sandbox='allow-same-origin allow-scripts' style='width:500px; height:150px; border: 1px solid black;'></iframe>
+    <br/><br />
+    
   </body>
 </html>
