add: Many tests

--- a/frame00.html
+++ b/frame00.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-  <script type="text/javascript" src="./frame.js"></script>
+  <script type="text/javascript" src="./frame00.js"></script>
 </head>
 <body style="font-size:14px">
   <input type="button" onclick="postToParent('Hello from child via postMessage', 'file://')" value="Hello to parent via postMessage, targetOrigin 'file://''"><br>
