--- a/frame.html
+++ b/frame.html
@@ -4,9 +4,9 @@
   <script type="text/javascript" src="./frame.js"></script>
 </head>
 <body style="font-size:14px">
-  <input type="button" onclick="postToParent('Hello from child via postMessage', 'file://')" value="Hello to parent via postMessage, targetOrigin 'file://''"><br>
-  <input type="button" onclick="sayToParentInGlobalScope('Hello from child via window.parent (Global Scope)')" value="Hello to parent via window.parent (Global Scope)">
-  <input type="button" onclick="sayToParentInBlockScope('Hello from child via window.parent (Block Scope)')" value="Hello to parent via window.parent (Block Scope)">  
+  <input type="button" onclick="postToParent('Hello from child via postMessage', 'file://')" value="Hello to parent via postMessage, targetOrigin 'file://''"> => [Top output] "Not expected origin (file://): https://canal874-electron-test-security-sandbox.netlify.app" <br>
+  <input type="button" onclick="sayToParentInGlobalScope('Hello from child via window.parent (Global Scope)')" value="Hello to parent via window.parent (Global Scope)"> => [output] "sayToParentInGlobalScope() error: SecurityError: Blocked a frame with origin "https://canal874-electron-test-security-sandbox.netlify.app" from accessing a cross-origin frame."<br>
+  <input type="button" onclick="sayToParentInBlockScope('Hello from child via window.parent (Block Scope)')" value="Hello to parent via window.parent (Block Scope)">  => [output] "sayToParentInBlockScope() error: SecurityError: Blocked a frame with origin "https://canal874-electron-test-security-sandbox.netlify.app" from accessing a cross-origin frame."<br>
   <hr>
   output <input type="button" onclick="document.getElementById('result').innerHTML=''" value="clear"><br />
   <div id="result" style="width:100%; height:100%; border:1px solid black"> </div>
