--- a/internetresource.html
+++ b/internetresource.html
@@ -5,6 +5,6 @@
 </head>
 <body style="font-size:14px">
   <h1>Internet resource for test</h1>
-  <input type="button" onclic="window.history.back()">
+  <input type="button" onclick="window.history.back()">
 </body>
 </html>
