add: Test for Contents Security Policy

--- a/frame10.html
+++ b/frame10.html
@@ -2,7 +2,7 @@
   <script type="text/javascript" src="./frame.js"></script>
 </head>
 <body style="font-size:14px">
-  <input type='button' onclick='window.open()' value='window.open()'/> => A new window is opened."<br>
+  <input type='button' onclick='window.open()' value='window.open()'/> => A new window is opened.<br>
   <input type='button' onclick='parent.window.open()' value='parent.window.open()'/> => [Developer Tools console] "open is disabled"<br>
   <input type='button' onclick='removeAPIs()' value='removeAPIs'/> => Remove window.open API. <br>
   <input type='button' onclick='window.open()' value='window.open()'/> => [Developer Tools console] "open is disabled"<br>
