--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
     <h2>(B) Load file:// resource on iframe with sandbox</h2>
     <p>
-      Sandox with no allow-same-origin<br>
+      Sandbox with no allow-same-origin<br>
       &lt;iframe sandbox='allow-scripts' src='./frame02.html' /&gt;
     </p>
     <p style="color: red">
@@ -88,7 +88,7 @@
 
     <h2>(C) Load file:// resource on iframe with allow-same-origin</h2>    
     <p>
-      Sandox with allow-same-origin<br>
+      Sandbox with allow-same-origin<br>
       &lt;iframe sandbox='allow-same-origin allow-scripts' src='./frame03.html' /&gt;
     </p>
     <input
@@ -117,7 +117,7 @@
     
     <h2>(D) Load https:// resource on iframe with allow-same-origin</h2>
     <p>
-      Sandox with allow-same-origin<br>
+      Sandbox with allow-same-origin<br>
       &lt;iframe sandbox='allow-same-origin allow-scripts' src='https://canal874-electron-test-security-sandbox.netlify.app/frame.html' /&gt;
     </p>
     <input
@@ -202,7 +202,7 @@
     <br/><br />
 
 
-    <h2>(J) window.open() with allow_-popups/h2>    
+    <h2>(J) window.open() with allow-popups</h2>    
     <p>
     &lt;iframe sandbox='allow-same-origin allow-scripts allow-popups' src='./frame10.html' /&gt;<br>
     </p>
